Edited wiki page Contributing through web user interface.

--- a/wiki/Contributing.wiki
+++ b/wiki/Contributing.wiki
@@ -40,8 +40,13 @@ If you are prompted for a username/password, use your googlecode password from [
 6. If you need your change to appear in Chrome, remind one of the project OWNERs to rev the downstream DEPS 
 
 
+#notes Some notes
 
-If you are editing tracing from the chrome repo, add the following lines to your trace-viewer .gitconfig:
+* Testing full files against importer changes: put a file into test_data/, then edit and run src/interactive_tests.html. 
+
+* Chromium: If you are editing tracing from the chrome repo, add the following lines to your trace-viewer .gitconfig:
+{{{
 [svn-remote "svn"]
         url = https://trace-viewer.googlecode.com/svn/trunk
         fetch = :refs/remotes/git-svn
+}}}
