Edited wiki page Embedding through web user interface.

--- a/wiki/Embedding.wiki
+++ b/wiki/Embedding.wiki
@@ -19,10 +19,10 @@ Then bring those in:
 <script src="trace_viewer.js"></script>
 }}}
 
-Once its loaded, TimelineView and TimelineModel are your friends:
+Once its loaded, TimelineView and Model are your friends:
 {{{
 document.addEventListener('DOMContentLoaded', function() {
-  var model = TimelineModel();
+  var model = Model();
   model.importTraces([... do an xhr to get the data...]);
 
   var viewEl = tracing.TimelineView();
