--- a/wiki/Contributing.wiki
+++ b/wiki/Contributing.wiki
@@ -52,6 +52,20 @@ git cl dcommit
 }}}
 If you are prompted for a username/password, use your googlecode password from [https://code.google.com/hosting/settings here].
 
+= Working with examples page =
+The  `examples/trace_viewer.html` is a standalone Web page simulating
+the `about:tracing` page with canned tracing data.
+If you run the `run_dev_server.py` script in the root directory
+then navigate to `localhost:8003/examples/trace_viewer.html` you should be
+able to see an example trace. 
+
+If you want to see other data, edit `trace_viewer.html` and change the line which sets filenames near the bottom. Change the
+`../test_data/simple_trace.json` to the path to another json file and reload the
+page. There are a few different files in `test_data/` that can be used for
+this purpose. It isn't possible to run a new trace from the
+example file as `chrome://tracing` has to be built directly into chrome to
+have the needed access.
+
 =Updating Chromium's about:tracing==
 To get your change to appear in Chrome's about:tracing, commit to trace-viewer. Make a note of the svn revision you landed. Then edit Chrome's [http://src.chromium.org/chrome/trunk/src/DEPS src/DEPS] file. Look in there for a line like
 {{{
