--- a/wiki/Contributing.wiki
+++ b/wiki/Contributing.wiki
@@ -7,7 +7,7 @@
 {{{
 git svn clone https://trace-viewer.googlecode.com/svn/trunk/ trace-viewer
 }}}
-Make sure you have git svn installed. apt-get install git-svn if not.
+Make sure you have git svn installed. `apt-get install git-svn` if not.  The local copy of the source will be a git repository, all the normal git commands work locally.  The special git svn commands are only needed when connecting to the legacy remote server.
 
 =Getting the code, with Chromium=
 
@@ -40,11 +40,14 @@ You can then run any of _test.html by browsing to http://localhost:8003/src/.
 git commit -a -m "My change"
 git cl upload
 }}}
+Note that running the tests or any `build/generate_*` script creates
+`src/deps.js` which should be checked into SVN.
 
-3b. If you need to update your code, foreach branch you need to update:
+3b. To update your local repository, first ensure that you have no uncommitted changes then `git checkout master`.  Then update using
 {{{
 git svn rebase
 }}}
+For each local branch, rebase them to the new master branch, eg `git rebase master local-branch-name`.
 
 4. When you've gotten LGTM
 {{{
@@ -59,11 +62,12 @@ If you run the `run_dev_server.py` script in the root directory
 then navigate to `localhost:8003/examples/trace_viewer.html` you should be
 able to see an example trace. 
 
-There is a drop-down at the top of the screen that will allow you to select
-other trace data to view.
-
-It isn't possible to run a new trace from the example file as `chrome://tracing`
-has to be built directly into chrome to have the needed access.
+If you want to see other data, edit `trace_viewer.html` and change the line which sets filenames near the bottom. Change the
+`../test_data/simple_trace.json` to the path to another json file and reload the
+page. There are a few different files in `test_data/` that can be used for
+this purpose. It isn't possible to run a new trace from the
+example file as `chrome://tracing` has to be built directly into chrome to
+have the needed access.
 
 =Updating Chromium's about:tracing==
 To get your change to appear in Chrome's about:tracing, commit to trace-viewer. Make a note of the svn revision you landed. Then edit Chrome's [http://src.chromium.org/chrome/trunk/src/DEPS src/DEPS] file. Look in there for a line like
