Edited wiki page TraceViewerComponents through web user interface.

--- a/wiki/TraceViewerComponents.wiki
+++ b/wiki/TraceViewerComponents.wiki
@@ -6,14 +6,19 @@ Trace viewer components are trying to evolve toward a "Web components" design, b
 We care the most about the public interface of the component.
 
 Properties:
-# Properties should be settable in any order
-# Properties can be backed by a member variable of the same name, e.g. set foo() -> this.foo_. If their use is super trivial, e.g. just passthrough to some other property, then its okay to not store it as a member variable.
-# Properties should come with getters, unless it is non-sensical. If you dont "need it" you should still write it.
+  # Properties should be settable in any order
+  # Properties can be backed by a member variable of the same name, e.g. set foo() -> this.foo_. If their use is super trivial, e.g. just passthrough to some other property, then its okay to not store it as a member variable.
+  # Properties should come with getters, unless it is non-sensical. If you don't "need it" you should still write it.
 
 Events:
-# The component should dispatch events when it changes internally, but not all properties need to dispatch change events
+  # The component should dispatch events when it changes internally, but not all properties need to dispatch change events
 
-class-names-are-like-this
+Property Declaration Order:
+  # __proto__ 
+  # decorate() 
+  # getter/setter pairs
+  # public methods
+  # private methods, post-pended with underbar_
 
 
 =Preliminaries=
@@ -85,6 +90,6 @@ If a property has invalid values, the setter should raise an exception before le
 
 
 =Complex update calculations=
-Sometimes the repeated calling of updateContents_ is too costly. TWo options:
-1. add a setter for the pair of properties that are often set together. E.g., setPrefixAndSpanLabel(span, spanLabel).
-2. scheduleUpdateContents_() from the setters and have the scheduler use base.requestAnimationFrameInThisFrameIfPossible to call the actual updateContents_ function.
+Sometimes the repeated calling of updateContents_ is too costly. Two options:
+  # add a setter for the pair of properties that are often set together. E.g., setPrefixAndSpanLabel(span, spanLabel), or
+  # scheduleUpdateContents_() from the setters and have the scheduler use base.requestAnimationFrameInThisFrameIfPossible to call the actual updateContents_ function.
